--- a/content/A.tex
+++ b/content/A.tex
@@ -1,89 +1,89 @@
 \chapter{A a}
 
-A /a/ — and, but, although, however
+\textbf{A} \textipa{/a/} — and, but, although, however
 
-Abazin /aba`zɪn/ — Abazin
+\textbf{Abazin} \textipa{/aba`zIn/} — Abazin
 
-Abazinskyǐ /aba`zɪnskɨj/ —
+\textbf{Abazinskyǐ} \textipa{/aba`zInsk1j/} —
 
-Abbat /`abbat/ — abbot
+\textbf{Abbat} \textipa{/`abbat/} — abbot
 
-Abbatisa /abba`tisa/ — abbess
+\textbf{Abbatisa} \textipa{/abba`tisa/} — abbess
 
-Abissinec /abɪ`ssɪnɛt͡s/ —
+\textbf{Abissinec} \textipa{/abI`ssInE\t{ts}/} —
 
-Abissinskyǐ /abɪ`ssɪnskɨj/
+\textbf{Abissinskyǐ} \textipa{/abI`ssInsk1j/}
 
-Abo /`abo/ — or
+\textbf{Abo} /`abo/ — or
 
-Abrakadabra /abraka`dabra/ — abracadabra
+\textbf{Abrakadabra} \textipa{/abraka`dabra/} — abracadabra
 
-Absolütno — absolute
+\textbf{Absolütno} — absolute
 
-Aby /abɨ/ — for, in purpose
+\textbf{Aby} \textipa{/ab1/} — for, in purpose
 
-Aga /a`ɣa/ — yes
+\textbf{Aga} \textipa{/a`Ga/} — yes
 
-Agoǐ /a`ɣoj/ — hi, hello
+\textbf{Agoǐ} \textipa{/a`Goj/} — hi, hello
 
-Adrijatika /adrijatɪka/ — Adriatic [sea/region]
+\textbf{Adrijatika} \textipa{/adrijatIka/} — Adriatic [sea/region]
 
-Až /aʐ/ — even
+\textbf{Až} \textipa{/a\textcommatailz/} — even
 
-Az /az/ — I
+\textbf{Az} \textipa{/az/} — I
 
-Azbuka /`azbuka/ — alphabet
+\textbf{Azbuka} \textipa{/`azbuka/} — alphabet
 
-Azerbaǐđanskyǐ /azɛrbaj`d͡ʑanskɨj/ — Azerbaijani
+\textbf{Azerbaǐđanskyǐ} \textipa{/azErbaj`\t{d\textctz}ansk1j/} — Azerbaijani
 
-Ako /`ako/ — if, whether
+\textbf{Ako} \textipa{/`ako/} — if, whether
 
-Ale /a`lɛ/ — but, however
+\textbf{Ale} \textipa{/a`lE/} — but, however
 
-Aleksander /alɛ`k͡sandər/ — Alexander
+\textbf{Aleksander} \textipa{/alE`\t{ks}and8r/} — Alexander
 
-Aleksěǐ /alɛ`k͡sᵻj/ — Alex
+\textbf{Aleksěǐ} \textipa{/alE`\t{ks}1j/} — Alex
 
-Alĝoriŧm — algorithm
+\textbf{Alĝoriŧm} — algorithm
 
-Alĝoriŧmujemyǐ — algorithmic
+\textbf{Alĝoriŧmujemyǐ} — algorithmic
 
-Allah /`allax/ — Allah
+\textbf{Allah} /`allax/ — Allah
 
-Allïluia /alʎi`luɪa/ — hallelujah
+\textbf{Allïluia} \textipa{/alLi`luIa/} — hallelujah
 
-Aljpy /`aʎpɨ/ — Alpes
+\textbf{Aljpy} \textipa{/`aLp1/} — Alpes
 
-Alofon — allophone
+\textbf{Alofon} — allophone
 
-Alofonnyǐ — allophonic
+\textbf{Alofonnyǐ} — allophonic
 
-Alofonstvo
+\textbf{Alofonstvo}
 
-Ama /`ama/ — and, but
+\textbf{Ama} /`ama/ — and, but
 
-Analoĝ — analogue
+\textbf{Analoĝ} — analogue
 
-Andorra /an`dorra/ — Andorra
+\textbf{Andorra} /an`dorra/ — Andorra
 
-Andrěǐ /an`drᵻj/ — Andrew
+\textbf{Andrěǐ} \textipa{/an`dr1j/} — Andrew
 
-Angar /`anɣar/ — shed
+\textbf{Angar} \textipa{/`anGar/} — shed
 
-Ambar /`ambar/ — barn
+\textbf{Ambar} \textipa{/`ambar/} — barn
 
-Anĝliǐskyǐ — English
+\textbf{Anĝliǐskyǐ} — English
 
-Anotacija — Annotation
+\textbf{Anotacija} — Annotation
 
-Antïhrist /anci`xrɪst/ — Antichrist
+\textbf{Antïhrist} \textipa{/anci`xrIst/} — Antichrist
 
-Apa /apa/
+\textbf{Apa} /apa/
 
-Apostol /a`postol/ — apostol
+\textbf{Apostol} /a`postol/ — apostol
 
-Arab /`arab/ — Arab
+\textbf{Arab} /`arab/ — Arab
 
-Areal — areal
+\textbf{Areal} — areal
 
-Arebica — Slavic Arabic script
+\textbf{Arebica} — Slavic Arabic script
