--- a/content/B.tex
+++ b/content/B.tex
@@ -4,13 +4,13 @@ Baba /`baba/ — grandmother, woman
 
 Babka /`babka/ — grandmother
 
-Babuška /`babuʂka/ — Granny
+Babuška \textipa{/`babu\:ska/} — Granny
 
-Bagno /`baɣno/ — swamp
+Bagno \textipa{/`baGno/} — swamp
 
-Bajan /baʝan/ — bayan
+Bajan \textipa{/baJan/} — bayan
 
-Bajanist /baʝanɪst/ — bayanist
+Bajanist \textipa{/baJanIst/} — bayanist
 
 Balalaǐka /balalajka/ — balalayka
 
@@ -20,9 +20,9 @@ Banä /ban’æ/ —
 
 Banan /banan/ — banana
 
-Banđo /band͡ʑo/ — banjo
+Banđo \textipa{/ban\t{d\textctz}o/} — banjo
 
-Bandôra /bandʊra/
+Bandôra \textipa{/bandUra/}
 
 Baobab /baobab/
 
@@ -30,365 +30,365 @@ Bar /bar/ —
 
 Bara /bara/
 
-Barŝo /bard͡zo/
+Barŝo \textipa{/bar\t{dz}o/}
 
 Bas /bas/ — bass
 
 Basnä /basn’æ/
 
-Basolä /basoʎæ/
+Basolä \textipa{/basoLæ/}
 
-Batjkа /`backa/ — elder brother
+Batjka \textipa{/`backa/} — elder brother
 
-Batoga /batoɣa/
+Batoga \textipa{/batoGa/}
 
-Batožina /`batoʐɪna/ — luggage
+Batožina \textipa{/`bato \textcommatailz Ina/} — luggage
 
-Bávnyǐ /`ba: vnɨj/ — slow
+Bávnyǐ \textipa{/`ba:vn1j/} — slow
 
 Bazar /`bazar/ — bazaar
 
-Bažina /baʐɪna/
+Bažina \textipa{/ba \textcommatailz Ina/}
 
-Bčela /`bt͡ʃɛla/ — bee
+Bčela \textipa{/`b\t{tS}Ela/} — bee
 
-Bčelnik /bt͡ʃɛlnɪk/
+Bčelnik \textipa{/b\t{tS}ElnIk/}
 
-Bčelovod /bt͡ʃɛlovod/
+Bčelovod \textipa{/bt{tS}Elovod/}
 
-Bčelovodstvo /bt͡ʃɛlovodstvo/
+Bčelovodstvo \textipa{/b\t{tS}Elovodstvo/}
 
-Beba /bɛba/ — baby
+Beba \textipa{/bEba/} — baby
 
-Besěda /bɛsᵻda/ — conversation, chat
+Besěda \textipa{/bEs1da/} — conversation, chat
 
-Beton /bɛton/
+Beton \textipa{/bEton/}
 
-Betonovati /bɛtonovatɪ/
+Betonovati \textipa{/bEtonovatI/}
 
-Bez /bɛz/ — without
+Bez \textipa{/bEz/} — without
 
-Bezbroǐnyǐ /bɛzbrojnɨj/
+Bezbroǐnyǐ \textipa{/bEzbrojn1j/}
 
-Bezdětnaǐ /bɛzdᵻtnaj/
+Bezdětnaǐ \textipa{/bEzd1tnaj/}
 
-Bezdětnostj /bɛzdᵻtnosc/
+Bezdětnostj \textipa{/bEzd1tnosc/}
 
-Bezdětnyǐ /bɛzdᵻtnɨj/
+Bezdětnyǐ \textipa{/bEzd1tn1j/}
 
-Bezdomec /bɛzdomɛt͡s/
+Bezdomec \textipa{/bEzdomE\t{ts}/}
 
-Bezdomnyǐ /bɛzdomnɨj/
+Bezdomnyǐ \textipa{/bEzdomn1j/}
 
-Benzin /bɛnzɪn/
+Benzin \textipa{/bEnzIn/}
 
-Berlïn /`bɛrʎin/ — Berlin
+Berlïn \textipa{/`bErLin/} — Berlin
 
-Bezglåsnyǐ /bɛz`ɣlʌsnɨj/ — voiceless
+Bezglåsnyǐ \textipa{/bEz`GlAsn1j/} — voiceless
 
-Bezglåvyǐ /bɛz`ɣlʌvɨj/ — headless
+Bezglåvyǐ \textipa{/bEz`GlAv1j/} — headless
 
-Bezkonečnostj /bɛz`konɛt͡ʃnosc/ — infinity
+Bezkonečnostj \textipa{/bEz`konE\t{tS}nosc/} — infinity
 
-Bezkraǐnostj /bɛz`krajnosc/ — boundlessness, endlessness
+Bezkraǐnostj \textipa{/bEz`krajnosc/} — boundlessness, endlessness
 
-Bezkraǐnyǐ /bɛz`krajnɨj/ — boundless, endless
+Bezkraǐnyǐ \textipa{/bEz`krajn1j/} — boundless, endless
 
-Beznosec /bɛznosɛt͡s/
+Beznosec \textipa{/bEznosE\t{ts}/}
 
-Beznosyǐ /bɛznosɨj/
+Beznosyǐ \textipa{/bEznos1j/}
 
-Bezpamętnyǐ /bɛzpam’eŋtnɨj/
+Bezpamętnyǐ \textipa{/bEzpam’eNtn1j/}
 
-Bezpamętstvo /bɛzpam’eŋtstvo/
+Bezpamętstvo \textipa{/bEzpam’eNtstvo/}
 
-Bezpečnostj /bɛzpɛt͡ʃnosc/
+Bezpečnostj \textipa{/bEzpE\t{tS}nosc/}
 
-Bezplodnyǐ /bɛzplodnɨj/
+Bezplodnyǐ \textipa{/bEzplodn1j/}
 
-Bezpokôǐnyǐ /bɛzpokʊjnɨj/
+Bezpokôǐnyǐ \textipa{/bEzpokUjn1j/}
 
-Bezrodnyǐ /bɛzrodnɨj/
+Bezrodnyǐ \textipa{/bEzrodn1j/}
 
-Bezrųkyǐ /bɛzruŋkɨj/
+Bezrųkyǐ \textipa{/bEzruNk1j/}
 
-Bezsomněnno /bɛzsomnᵻnno/
+Bezsomněnno \textipa{/bEzsomn1nno/}
 
-Bezumec /bɛzumɛt͡s/
+Bezumec \textipa{/bEzumE\t{ts}/}
 
-Bezumnyǐ /bɛzumnɨj/
+Bezumnyǐ \textipa{/bEzumn1j/}
 
-Bezumstvo /bɛzumstvo/
+Bezumstvo \textipa{/bEzumstvo/}
 
-Bezvětrïë /bɛzvᵻtr’e/
+Bezvětrïë \textipa{/bEzv1tr’e/}
 
-Bezvlåsyǐ /bɛzvlʌsɨj/
+Bezvlåsyǐ \textipa{/bEzvlAs1j/}
 
-Bezvodnyǐ /bɛzvodnɨj/
+Bezvodnyǐ \textipa{/bEzvodn1j/}
 
-Bezvôlnyǐ /bɛzvʊlnɨj/
+Bezvôlnyǐ \textipa{/bEzvUln1j/}
 
-Bezzųbec /bɛzzuŋbɛt͡s/
+Bezzųbec \textipa{/bEzzuNbE\t{ts}/}
 
-Bezzųbyǐ /bɛzzuŋbɨj/
+Bezzųbyǐ \textipa{/bEzzuNb1j/}
 
 Bëdro /b’edro/
 
-Běda /bᵻda/
+Běda \textipa{/b1da/}
 
-Bědnati /bᵻdnatɪ/
+Bědnati \textipa{/b1dnatI/}
 
-Bědnostj /bᵻdnosc/
+Bědnostj \textipa{/b1dnosc/}
 
-Bědnota /bᵻdnota/
+Bědnota \textipa{/b1dnota/}
 
-Bědnyǐ /bᵻdnɨj/
+Bědnyǐ \textipa{/b1dn1j/}
 
-Bědstvo /bᵻdstvo/
+Bědstvo \textipa{/b1dstvo/}
 
-Běg /bᵻɣ/ — run
+Běg \textipa{/b1G/} — run
 
-Běgač /`bᵻɣat͡ʃ/ — runner
+Běgač \textipa{/`b1Ga\t{tS}/} — runner
 
-Běgati /`bᵻɣatɪ/ — to run
+Běgati \textipa{/`b1GatI/} — to run
 
-Bělagora /bᵻlaɣora/
+Bělagora \textipa{/b1laGora/}
 
-Bělgråd Russkyǐ /`bᵻlɣrʌd `rus’kɨj/ — Belgorod
+Bělgråd Russkyǐ \textipa{/`b1lGrAd `rus’k1j/} — Belgorod
 
-Bělgråd Sůrbskyǐ /`bᵻlɣrʌd `sərbskɨj/ - Belgrad
+Bělgråd Sůrbskyǐ \textipa{/`b1lGrAd `s8rbsk1j/} - Belgrad
 
-Běliti /bᵻlɪtɪ/
+Běliti \textipa{/b1lItI/}
 
-Běljĝïä /bᵻʎg’æ/
+Běljĝïä \textipa{/b1Lg’æ/}
 
-Bělokamęnyǐ /bᵻlokam’eŋnɨj/
+Bělokamęnyǐ \textipa{/b1lokam’eNn1j/}
 
-Bělorusj /bᵻlorus’/ — Belarus
+Bělorusj \textipa{/b1lorus’/} — Belarus
 
-Bělorusjkyǐ /bᵻlorus’kɨj/ — Belarussian
+Bělorusjkyǐ \textipa{/b1lorus’k1j/} — Belarussian
 
-Bělorusy /bᵻlorusɨ/ — Belorussians
+Bělorusy \textipa{/b1lorus1/} — Belorussians
 
-Bělyǐ /bᵻlɨj/ — white
+Bělyǐ \textipa{/b1l1j/} — white
 
-Běs /bᵻs/
+Běs \textipa{/b1s/}
 
-Běsę /bᵻs’eŋ/
+Běsę \textipa{/b1s’eN/}
 
-Běžec /bᵻʐɛt͡s/ — runner
+Běžec \textipa{/b1\textctz E\t{ts}/} — runner
 
-Běžeti /bᵻʐɛtɪ/
+Běžeti \textipa{/b1\textcommatailz EtI/}
 
-Bi /bɪ/ — would
+Bi \textipa{/bI/} — would
 
-Bïblija /b’iblɪʝa/ — Bible
+Bïblija \textipa{/b’iblIJa/} — Bible
 
-Bilïon /bɪʎion/ — billion
+Bilïon \textipa{/bILion/} — billion
 
-Bĭti /b’jitɪ/ —
+Bĭti \textipa{/b’jitI/} —
 
-Bĭti sę /b’jitɪ s’eŋ/
+Bĭti sę \textipa{/b’jitI s’eN/}
 
 Bĭtka /b’jitka/ — battle
 
 Bĭtva /b’jitva/ — battle
 
-Bĭtvęnyǐ /b’jitv’eŋnɨj/
+Bĭtvęnyǐ \textipa{/b’jitv’eNn1j/}
 
-Bïznes /b’iznɛs/ — business
+Bïznes \textipa{/b’iznEs/} — business
 
-Blågodaram /blʌɣodaram/ — thanks
+Blågodaram \textipa{/blAGodaram/} — thanks
 
-Blågodarati /blʌɣodar’atɪ/ — to thank
+Blågodarati \textipa{/blAGodar’atI/} — to thank
 
-Blågodarnyǐ /blʌɣodarnɨj/ — thankful
+Blågodarnyǐ \textipa{/blAGodarn1j/} — thankful
 
-Blågoprati /blʌɣopratɪ/
+Blågoprati \textipa{/blAGopratI/}
 
-Blågorečïë /blʌɣorɛt͡ɕe/
+Blågorečïë \textipa{/blAGorE\t{tC}e/}
 
-Blåto /blʌto/
+Blåto \textipa{/blAto/}
 
-Blazenj /blazɛn’/
+Blazenj \textipa{/blazEn’/}
 
-Blědyǐ /blᵻdɨj/
+Blědyǐ \textipa{/bl1d1j/}
 
-Blěsk /blᵻsk/
+Blěsk \textipa{/bl1sk/}
 
-Blěskavica /blᵻskavɪt͡sa/
+Blěskavica \textipa{/bl1skavI\t{ts}a/}
 
-Blïzko /`bʎizko/ — closely
+Blïzko \textipa{/`bLizko/} — closely
 
-Blïzkyǐ /`bʎizkɨj/ — close, next to
+Blïzkyǐ \textipa{/`bLizk1j/} — close, next to
 
-Blïznacy /`bʎiznat͡sɨ/ — twins
+Blïznacy \textipa{/`bLizna\t{ts}1/} — twins
 
-Blogarnä /bloɣarn’æ/
+Blogarnä \textipa{/bloGarn’æ/}
 
 Blųd /bluŋd/
 
-Blųđati /bluŋd͡ʑatɪ/
+Blųđati \textipa{/bluN\t{d\textctz}atI/}
 
-Blųđati /bluŋd͡ʑatɪ/
+Blųđati \textipa{/bluN\t{d\textctz}atI/}
 
-Blüdco /bʎʊ̈dt͡so/
+Blüdco \textipa{/bL\''Ud\t{ts}o/}
 
-Blųditi /bluŋdɪtɪ/
+Blųditi \textipa{/bluNdItI/}
 
 Blųdj /bluŋd/
 
-Blųdnyǐ /bluŋdnɨj/
+Blųdnyǐ \textipa{/bluNdn1j/}
 
-Blüdo /bʎʊ̈do/
+Blüdo \textipa{/bL\''Udo/}
 
 Bob /bob/
 
-Bobůr /bobər/
+Bobůr \textipa{/bob8r/}
 
-Bobůr /bobər/
+Bobůr \textipa{/bob8r/}
 
-Bočar /bot͡ʃar/
+Bočar \textipa{/bo\t{tS}ar/}
 
-Bočóv /bot͡ʃo: v/
+Bočóv \textipa{/bo\t{tS}o: v/}
 
-Bodati /bodatɪ/
+Bodati \textipa{/bodatI/}
 
-Bodec /bodɛt͡s/
+Bodec \textipa{/bodE\t{ts}/}
 
 Bodnar /bodnar/
 
-Bodnarnyǐ /bodnarnɨj/
+Bodnarnyǐ \textipa{/bodnarn1j/}
 
-Bôg /bʊɣ/ — God
+Bôg \textipa{/bUG/} — God
 
-Bogač /boɣat͡ʃ/
+Bogač \textipa{/boGa\t{tS}/}
 
-Bogač /boɣat͡ʃ/
+Bogač \textipa{/boGa\t{tS}/}
 
-Bogalj /boɣaʎ/
+Bogalj \textipa{/boGaL/}
 
-Bogateǐ /boɣatɛj/
+Bogateǐ \textipa{/boGatEj/}
 
-Bogateti /boɣatɛtɪ/
+Bogateti \textipa{/boGatEtI/}
 
-Bogatstvo /boɣatstvo/
+Bogatstvo \textipa{/boGatstvo/}
 
-Bogatůr /boɣatər/
+Bogatůr \textipa{/boGat8r/}
 
-Bogatyǐ /boɣatɨj/
+Bogatyǐ \textipa{/boGat1j/}
 
-Bogatyrj /boɣatɨr’/
+Bogatyrj \textipa{/boGat1r’/}
 
-Boginä /boɣɪn’æ/
+Boginä \textipa{/boGIn’æ/}
 
-Bôǐ /bʊj/
+Bôǐ \textipa{/bUj/}
 
-Bojar /boʝar/
+Bojar \textipa{/boJar/}
 
-Bojazlivec /boʝazlɪvɛt͡s/
+Bojazlivec \textipa{/boJazlIvE\t{ts}/}
 
-Bojec /boʝɛt͡s/
+Bojec \textipa{/boJE\t{ts}/}
 
-Bôjovati /bʊʝovatɪ/
+Bôjovati \textipa{/bUJovatI/}
 
 Bok /bok/
 
-Boḱ /bok͡s/
+Boks \textipa{/bo\t{ks}/}
 
-Boḱar /bok͡sar/
+Boksar \textipa{/bo\t{ks}ar/}
 
-Boḱovati /bok͡sovatɪ/
+Boksovati \textipa{/bo\t{ks}ovatI/}
 
-Bôlj /bʊʎ/ — ache
+Bôlj \textipa{/bUL/} — ache
 
-Bôljnica /bʊʎnɪt͡sa/ — hospital
+Bôljnica \textipa{/bULnI\t{ts}a/} — hospital
 
-Bôljno /bʊʎno/
+Bôljno \textipa{/bULno/}
 
-Boljše /boʎʂɛ/
+Boljše \textipa{/boL\:sE/}
 
-Boljšina /boʎʂɪna/
+Boljšina \textipa{/boL\:sIna/}
 
 Bomba /bomba/ — bomb
 
 Boran /boran/ —
 
-Boranina /boranɪna/
+Boranina \textipa{/boranIna/}
 
 Borava /borava/
 
 Borba /borba/
 
-Borec /borɛt͡s/
+Borec \textipa{/borE\t{ts}/}
 
-Boris /borɪs/ — Boris
+Boris \textipa{/borIs/} — Boris
 
-Borisláv /borɪsla: v/
+Borisláv \textipa{/borIsla: v/}
 
-Boršt /borʂt/ — borshch
+Boršt \textipa{/bor\:st/} — borshch
 
 Borv /borv/
 
-Borzyǐ /borzɨj/
+Borzyǐ \textipa{/borz1j/}
 
-Bosyǐ /bosɨj/
+Bosyǐ \textipa{/bos1j/}
 
-Bråda /brʌda/ —
+Bråda \textipa{/brAda/} —
 
 Brak /brak/
 
 Bramkar /bramkar/
 
-Bramnik /bramnɪk/
+Bramnik \textipa{/bramnIk/}
 
-Bråna /brʌna/
+Bråna \textipa{/brAna/}
 
-Bråna /brʌna/
+Bråna \textipa{/brAna/}
 
-Brånibor /brʌnɪbor/
+Brånibor \textipa{/brAnIbor/}
 
-Brånibor Novyǐ /brʌnɪbor novɨj/
+Brånibor Novyǐ \textipa{/brAnIbor nov1j/}
 
-Bråništo /brʌnɪʂto/
+Bråništo \textipa{/brAnI\:sto/}
 
-Bråniti /brʌnɪtɪ/
+Bråniti \textipa{/brAnItI/}
 
-Bråŝj /brʌd͡z’/
+Bråŝj \textipa{/brA\t{dz}’/}
 
 Brat /brat/
 
-Bratec /bratɛt͡s/
+Bratec \textipa{/bratE\t{ts}/}
 
-Brati /bratɪ/
+Brati \textipa{/bratI/}
 
-Bratisláva /bratɪsla: va/
+Bratisláva \textipa{/bratIsla: va/}
 
 Bratóva /brato: va/
 
-Bratóvskyǐ /brato: vskɨj/
+Bratóvskyǐ \textipa{/brato: vsk1j/}
 
-Bratskyǐ /bratskɨj/
+Bratskyǐ \textipa{/bratsk1j/}
 
 Bratstvo /bratstvo/
 
 Bravo /bravo/
 
-Breg /brɛɣ/
+Breg \textipa{/brEG/}
 
-Brehati sę /brɛxatɪ s’eŋ/
+Brehati sę \textipa{/brExatI s’eN/}
 
-Bremę /brɛm’eŋ/
+Bremę \textipa{/brEm’eN/}
 
-Breža /brɛʐa/
+Breža \textipa{/brE\textctz a/}
 
-Briĝada /brɪgada/
+Briĝada \textipa{/brIgada/}
 
-Brijati /brɪʝatɪ/
+Brijati \textipa{/brIJatI/}
 
-Brila /brɪla/
+Brila \textipa{/brIla/}
 
-Brôd /brʊd/
+Brôd \textipa{/brUd/}
 
 Broǐnostj /brojnosc/
 
@@ -396,21 +396,17 @@ Bröza /br’œza/
 
 Bröza /br’œza/
 
-Brözenj /br’œzɛn’/
+Brözenj /br’œzEn’/
 
-Brüho /br’ʊ̈xo/
+Brüho \textipa{/br’\''Uxo/}
 
-Brüho /br’ʊ̈xo/
+Brükevj \textipa{/br’\''UkEv’/}
 
-Brüho /br’ʊ̈xo/
+Brusnica \textipa{/brusnI\t{ts}a/}
 
-Brükevj /br’ʊ̈kɛv’/
+Brusničnik \textipa{/brusnI\t{tS}nIk/}
 
-Brusnica /brusnɪt͡sa/
-
-Brusničnik /brusnɪt͡ʃnɪk/
-
-Brůvj /brəv’/
+Brůvj \textipa{/br8v’/}
 
 Brųz /bruŋz/
 
@@ -418,51 +414,51 @@ Bųb /buŋb/
 
 Bųbnar /buŋbnar/
 
-Bųbůn /buŋbən/
+Bųbůn \textipa{/buNb8n/}
 
 Búda /bu: da/
 
-Buđati /bud͡ʑatɪ/
+Buđati \textipa{/bu\t{dZ}atI/}
 
-Budïnpěšta /budinpᵻʂta/
+Budïnpěšta \textipa{/budinp1\:sta/}
 
-Buditi /budɪtɪ/
+Buditi \textipa{/budItI/}
 
-Búdovati /bu: dovatɪ/
+Búdovati \textipa{/bu: dovatI/}
 
-Búdovnyǐ /bu: dovnɨj/
+Búdovnyǐ \textipa{/bu:dovn1j/}
 
-Budučïǐ /budut͡ɕij/
+Budučïǐ \textipa{/budu\t{tC}ij/}
 
-Budučnostj /budut͡ʃnosc/
+Budučnostj \textipa{/budu\t{tS}nosc/}
 
-Budučnostj /budut͡ʃnosc/
+Budučnostj \textipa{/budu\t{tS}nosc/}
 
-Buhač /buxat͡ʃ/
+Buhač \textipa{/buxa\t{tS}/}
 
-Buǐnyǐ /bujnɨj/
+Buǐnyǐ \textipa{/bujn1j/}
 
 Buǐstvo /bujstvo/
 
-Bujaniti /buʝanɪtɪ/
+Bujaniti \textipa{/buJanItI/}
 
 Buk /buk/
 
-Bukureštj /bukurɛʃc/
+Bukureštj \textipa{/bukurESc/}
 
 Bukva /bukva/
 
-Bukvica /bukvɪt͡sa/
+Bukvica \textipa{/bukvI\t{ts}a/}
 
-Bůlĝar /bəlgar/
+Bòlĝar \textipa{/b8lgar/}
 
-Bůlĝarija /bəlgarɪʝa/
+Bòlĝarija \textipa{/b8lgarIJa/}
 
-Bůlĝary /bəlgarɨ/
+Bòlĝary \textipa{/b8lgar1/}
 
-Bůlha /bəlxa/
+Bòlha \textipa{/b8lxa/}
 
-Bůlšcy /bəlʂt͡sɨ/
+Bòlšcy \textipa{/b8l\:s\t{ts}1/}
 
 Bunt /bunt/
 
@@ -474,32 +470,32 @@ Burak /burak/
 
 Buran /buran/
 
-Burgas /burɣas/
+Burgas \textipa{/burGas/}
 
-Bůrno /bərno/
+Bòrno \textipa{/b8rno/}
 
-Burnyǐ /burnɨj/
+Burnyǐ \textipa{/burn1j/}
 
 Burunduk /burunduk/
 
-Búryǐ /bu: rɨj/
+Búryǐ \textipa{/bu:r1j/}
 
-Buvôl /buvʊl/
+Buvôl \textipa{/buvUl/}
 
-Buvôlïca /buvʊʎit͡sa/
+Buvôlïca \textipa{/buvULi\t{ts}a/}
 
-Bůzina /bəzɪna/
+Bòzina \textipa{/b8zIna/}
 
-Byk /bɨk/
+Byk \textipa{/b1k/}
 
-Byt /bɨt/
+Byt \textipa{/b1t/}
 
-Byti /bɨtɪ/
+Byti \textipa{/b1tI/}
 
-Bytije /bɨtɪʝɛ/
+Bytije \textipa{/b1tIJE/}
 
-Byvaǐ /bɨvaj/
+Byvaǐ \textipa{/b1vaj/}
 
-Byvšyǐ /bɨvʂɨj/
+Byvšyǐ \textipa{/b1v\:s1j/}
 
 Bzdura /bzdura/
