--- a/content/C.tex
+++ b/content/C.tex
@@ -1,23 +1,43 @@
 \chapter{C c}
 
-Capati /capatɪ/
-Caplä /capʎæ/
+Capati \textipa{/capatI/}
+
+Caplä \textipa{/capLæ/}
+
 Car /car/
-Caraptati /caraptatɪ/
-Cargråd /carɣrʌd/
-Carstvo /carstvo/
-Cělek /cᵻlɛk/
-Cělkom /cᵻlkom/
-Cělo /cᵻlo/
-Celovec /cɛlovɛt͡s/
-Cělyǐ /cᵻlɨj/
-Cělyǐ /cᵻlɨj/
-Cinůk /cɪnək/
-Ciplä /cɪpʎæ/
-Ciplönok /cɪpʎœnok/
-Cůrkevj /cərkɛv’/
-Cvět /cvᵻt/
-Cvětati /cvᵻtatɪ/
-Cvůrčati /cvərt͡ʃatɪ/
-Cvůrkati /cvərkatɪ/
-Cvůrkutati /cvərkutatɪ/
+
+Caraptati \textipa{/caraptatI/}
+
+Cargråd \textipa{/carGrAd/}
+
+Carstvo \textipa{/carstvo/}
+
+Cělek \textipa{/c1lEk/}
+
+Cělkom \textipa{/c1lkom/}
+
+Cělo \textipa{/c1lo/}
+
+Celovec \textipa{/\t{ts}ElovE\t{ts}/}
+
+Cělyǐ \textipa{/c1l1j/}
+
+Cělyǐ \textipa{/c1l1j/}
+
+Cinůk \textipa{/cIn8k/}
+
+Ciplä \textipa{/cIpLæ/}
+
+Ciplönok \textipa{/cIpLœnok/}
+
+Cůrkevj \textipa{/c8rkEv’/}
+
+Cvět \textipa{/cv1t/}
+
+Cvětati \textipa{/cv1tatI/}
+
+Cvůrčati \textipa{/cv8r\t{tS}atI/}
+
+Cvůrkati \textipa{/cv8rkatI/}
+
+Cvůrkutati \textipa{/cv8rkutatI/}
