some leeters updated

--- a/content/F.tex
+++ b/content/F.tex
@@ -1,8 +1,15 @@
 \chapter{F f}
-Fazan /fazan/ 
-Filarmonïä /fɪlarmon’iæ/ 
-Filjmę /fɪʎm’eŋ/ 
-Fizika /fɪzɪka/ 
-Flewta /flɛwta/ 
-Format /format/ 
-Fųtastika /fuŋtastɪka/
+
+Fazan \textipa{/fazan/}
+
+Filarmonïja \textipa{/fIlarmon’iJa/} 
+
+Filjmę \textipa{/fILm’eN/}
+
+Fizika \textipa{/fIzIka/}
+
+Flewta \textipa{/flEwta/} 
+
+Format \textipa{/format/}
+
+Fųtastika \textipa{/fuNtastIka/}
