--- a/content/H.tex
+++ b/content/H.tex
@@ -1,48 +1,87 @@
 \chapter{H h}
 
-Haǐ /haj/ 
-Hazna /hazna/ 
-Hëljsïncy /x’eʎs’int͡sɨ/ 
-Hilin /hɪlɪn/ 
-Hitrojumnyǐ /hɪtroʝumnɨj/ 
-Hitryǐ /hɪtrɨj/ 
-Hlåd /hlʌd/ 
-Hlådnyǐ /hlʌdnɨj/ 
-Hlåpec /hlʌpɛt͡s/ 
-Hlåpec /hlʌpɛt͡s/ 
-Hlěb /hlᵻb/ 
-Hočěbuž /hot͡ʃᵻbuʐ/ 
-Hođati /hod͡ʑatɪ/ 
-Hór /ho: r/ 
-Horoprav /horoprav/ 
-Hråbrac /hrʌbrat͡s/ 
-Hrabrostj /hrabrosc/ 
-Hråbryǐ /hrʌbrɨj/ 
-Hrám /hra: m/ 
-Hrånene /hrʌnɛnɛ/ 
-Hråniti /hrʌnɪtɪ/ 
-Hrånivec /hrʌnɪvɛt͡s/ 
-Hrupati /hrupatɪ/ 
-Hrupati /hrupatɪ/ 
-Hteti /htɛtɪ/ 
-Htivati /htɪvatɪ/ 
-Htivec /htɪvɛt͡s/ 
-Htivostj /htɪvosc/ 
-Hudo /hudo/ 
-Hudoba /hudoba/ 
-Hųdožestvennyǐ /huŋdoʐɛstvɛnnɨj/ 
-Hųdožnik /huŋdoʐnɪk/ 
-Hudyǐ /hudɨj/ 
-Hudyǐ /hudɨj/ 
-Hudyǐ /hudɨj/ 
-Hůrvacïä /hərvat͡s’iæ/ 
-Hvála /hva: la/ 
-Hvála /hva: la/ 
-Hvála /hva: la/ 
-Hvilïna /hvɪʎina/ 
-Hviljka /hvɪʎka/ 
-Hvojina /hvoʝɪna/ 
-Hvojinka /hvoʝɪnka/ 
-Hvojinnyǐ /hvoʝɪnnɨj/ 
-Hvôryǐ /hvʊrɨj/ 
-Hvost /hvost/
+Haǐ \textipa{/haj/}
+
+Hazna \textipa{/hazna/} 
+
+Hëljsïncy \textipa{/x’eLs’in\t{ts}1/}
+
+Hilin \textipa{/hIlIn/}
+
+Hitrojumnyǐ \textipa{/hItroJumn1j/} 
+
+Hitryǐ \textipa{/hItr1j/} 
+
+Hlåd \textipa{/hlAd/} 
+
+Hlådnyǐ \textipa{/hlAdn1j/} 
+
+Hlåpec \textipa{/hlApEt{ts}/} 
+
+Hlåpec \textipa{/hlApE\t{ts}/} 
+
+Hlěb \textipa{/hl1b/} 
+
+Hočěbuž \textipa{/ho\t{tS}1bu\:z/} 
+
+Hođati \textipa{/ho\t{d \textctz}atI/} 
+
+Hór \textipa{/ho: r/} 
+
+Horoprav \textipa{/horoprav/} 
+
+Hråbrac \textipa{/hrAbra\t{ts}/} 
+
+Hrabrostj \textipa{/hrAbrosc/} 
+
+Hråbryǐ \textipa{/hrAbr1j/} 
+
+Hrám \textipa{/hra: m/} 
+
+Hrånene \textipa{/hrAnEnE/} 
+
+Hråniti \textipa{/hrAnItI/} 
+
+Hrånivec \textipa{/hrAnIvE\t{ts}/} 
+
+Hrupati \textipa{/hrupatI/} 
+
+Hrupati \textipa{/hrupatI/} 
+
+Hteti \textipa{/htEtI/} 
+
+Htivati \textipa{/htIvatI/} 
+
+Htivec \textipa{/htIvE\t{ts}/} 
+
+Htivostj \textipa{/htIvosc/} 
+
+Hudo \textipa{/hudo/} 
+
+Hudoba \textipa{/hudoba/} 
+
+Hųdožestvennyǐ \textipa{/huNdo\:zEstvEnn1j/} 
+
+Hųdožnik \textipa{/huNdo\:znIk/} 
+
+Hudyǐ \textipa{/hud1j/} 
+
+Hudyǐ \textipa{/hud1j/} 
+
+Hůrvacïä \textipa{/h8rva\t{ts}’iJa/} 
+
+Hvála \textipa{/hva: la/} 
+
+Hvilïna \textipa{/hvILina/} 
+
+Hviljka \textipa{/hvILka/} 
+
+Hvojina \textipa{/hvoJIna/} 
+
+Hvojinka \textipa{/hvoJInka/} 
+
+Hvojinnyǐ \textipa{/hvoJInn1j/} 
+
+Hvôryǐ \textipa{/hvUr1j/} 
+
+Hvost \textipa{/hvost/}
