--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,8 @@
 \usepackage{graphicx}
 
 \setlength{\parindent}{0cm}
+\setlength{\parskip}{0.5em}
+
 
 \DeclareUnicodeCharacter{0166}{\barredT}
 \DeclareUnicodeCharacter{0167}{\barredt}
@@ -54,8 +56,14 @@
 \include{./content/A}
 \include{./content/B}
 \include{./content/C}
-% \include{./content/Č}
+\include{./content/CX}
 % \include{./content/D}
+
+
+\include{./content/F}
+
+
+\include{./content/H}
 
 % \include{./content/V}
 % \include{./content/G}
@@ -82,11 +90,9 @@
 % \include{./content/S}
 % \include{./content/Ŝ}
 % \include{./content/T}
-% \include{./content/Ŧ}
+\include{./content/TX}
 % \include{./content/U}
-% \include{./content/Ų}
-% \include{./content/F}
-% \include{./content/H}
+\include{./content/UN}
 
 
 % \include{./content/Š}
